--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "16.9.0",
-    "react-native": "0.61.5"
+    "react-native": "0.61.5",
+    "react-native-actionsheet": "^2.4.2",
+    "react-native-image-picker": "^2.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
