--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-actionsheet": "^2.4.2",
-    "react-native-image-picker": "^2.3.1"
+    "react-native-image-picker": "^2.3.1",
+    "react-native-tesseract-ocr": "^1.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
