--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ocrRN",
+  "name": "ocr-rn",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "jetifier": "^1.6.5",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-actionsheet": "^2.4.2",
